# BenchAssist-IL-Audit

./: .env.example  .gitignore  DASHBOARD_REVIEW_CHECKLIST.md  DATA_DICTIONARY.md  GITHUB_SETUP.md  LEGAL_EXPERT_RUNBOOK.md  Makefile  PROJECT_STATE_FOR_CHATGPT.md  README.md  REAL_CASE_DATA_CARD.md  SUBMISSION_CHECKLIST.md  VERCEL_DEPLOYMENT_CHECKLIST.md  WEB_DASHBOARD_QA_CHECKLIST.md  app.py  pyproject.toml
Oren_Gazal/: Data without judges age.xlsx  oren_data.json
configs/: audit_experiment_gemini_flash_lite.yaml  audit_experiment_gemini_flash_lite_core_full.yaml  audit_experiment_gemini_flash_lite_core_pilot.yaml  audit_experiment_gemini_flash_lite_pilot.yaml  audit_experiment_mock_qa.yaml  audit_experiment_real_cases_gemini_full.yaml  audit_experiment_real_cases_gemini_grounded.yaml  audit_experiment_real_cases_gemini_pilot.yaml  audit_experiment_real_cases_mock.yaml  gemini_detention_expanded_full.yaml  gemini_detention_expanded_minimal_address.yaml  gemini_detention_full.yaml  gemini_detention_pilot.yaml  gemini_detention_pilot_minimal_ui.yaml
docs/: address_variant_methodology.md  detention_data_sourcing.md  detention_data_sourcing_and_handling.md  detention_flagging_policy.md  detention_pilot_corpus.md  detention_system_layer.md  gemini_detention_minimal_run_workflow.md  gemini_detention_pilot_workflow.md
legal_corpus/: metadata.json
prompts/: bench_memo_schema.json  bench_memo_schema_v2.json  bench_memo_schema_v3.json  detention_baseline_en.txt  detention_baseline_he.txt  detention_demographic_blind_en.txt  detention_demographic_blind_he.txt  detention_fairness_aware_en.txt  detention_fairness_aware_he.txt  detention_prompt_files23_en.txt  system_prompt.txt  system_prompt_detention_audit.txt  system_prompt_v2.txt  system_prompt_v2_demographic_blind.txt  system_prompt_v2_fairness_aware.txt  system_prompt_v3_grounded.txt
rachel_data/: synthetic_pretrial_detention_llm_audit_dataset.xlsx  synthetic_pretrial_detention_llm_audit_dataset_2.xlsx  (+1 more)
scripts/: run_rachel_audit.py  (+5 more)
(+5815 files in other folders)
