[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchassist-il-audit"
version = "0.1.0"
description = "Fairness audit framework for BenchAssist-IL, an Israeli judicial decision-support assistant."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "TBD"}

dependencies = [
    "pandas>=2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "typer>=0.13",
    "jinja2>=3.1",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "streamlit>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
genai = [
    "google-genai>=1.0",
]
datasets = [
    "datasets>=2.14",
]

[project.scripts]
benchassist = "benchassist.run_batch:app"

[tool.setuptools.packages.find]
where = ["src"]
